--- a/webpack/package.json
+++ b/webpack/package.json
@@ -8,7 +8,13 @@
   },
   "author": "jinxiao",
   "license": "MIT",
-  "dependencies": {
+  "dependencies": {},
+  "devDependencies": {
+    "css-loader": "^0.28.9",
+    "html-webpack-plugin": "^2.30.1",
+    "raw-loader": "^0.5.1",
+    "style-loader": "^0.20.1",
+    "ts-loader": "^3.3.1",
     "webpack": "^3.10.0"
   }
 }
